# ScholarSynth

./: .gitignore  README.md  ScholarSynth_AIE8_Submission.md  env.example  pyproject.toml  requirements.txt  streamlit_app.py
docs/: SCHOLARSYNTH_LOGO.md
notebooks/: ScholarSynth_Advanced_Retrieval.ipynb  ScholarSynth_Evaluation.ipynb  ScholarSynth_Multi_Agent.ipynb  ScholarSynth_Personas.ipynb  ScholarSynth_Production.ipynb  ScholarSynth_RAG_Foundation.ipynb
